<resources>
    <string name="app_name">UMovieAndroid</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Confirmpassword">Confirm password</string>
    <string name="Genre">Genre</string>
    <string name="Era">Era</string>
    <string name="Rating">Rating - at least</string>
    <string name="Actor">Actor</string>
    <string name="Action">Action</string>
    <string name="Adventure">Adventure</string>
    <string name="Animation">Animation</string>
    <string name="Comedy">Comedy</string>
    <string name="Crime">Crime</string>
    <string name="Documentary">Documentary</string>
    <string name="Drama">Drama</string>
    <string name="Family">Family</string>
    <string name="Fantasy">Fantasy</string>
    <string name="History">History</string>
    <string name="Horror">Horror</string>
    <string name="Music">Music</string>
    <string name="Mystery">Mystery</string>
    <string name="Romance">Romance</string>
    <string name="ScienceFiction">Science Fiction</string>
    <string name="TVMovie">TV Movie</string>
    <string name="Thriller">Thriller</string>
    <string name="War">War</string>
    <string name="Western">Western</string>
    <string name="GoldenAgeEra19701989">Golden Age Era (1970- 1989)</string>
    <string name="ClassicEra19171969">Classic Era (1917-1969)</string>
    <string name="ModernEra19902009">Modern Era (1990-2009)</string>
    <string name="ContemporaryEra20102023">Contemporary Era (2010-2023)</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="_287_BradPitt">Brad Pitt</string>

    <!--    id:18897 movie:2109-Rush Hour,5175-Rush Hour 2,5174-Rush Hour 3,-->
    <string name="_6193_LeonardoDiCaprio">Leonardo DiCaprio</string>
    <!--    id:976 movie:107-Snatch,345940-The Meg,4108-The Transporter,-->
    <string name="Save">Save</string>
    <string name="content_description_favorite">Favorite</string>
    <string name="content_description_profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="Recommended">Recommended</string>
    <string name="WatchList">Watch List</string>
    <string name="Dislike">Dislike</string>
    <string name="Comment">Comment</string>

    <!--    <string name="web_client_id">540405413711-bb0h44h78p4aicla5s92k4fb4urq1k0a.apps.googleusercontent.com</string>-->
</resources>