<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorite"
        android:contentDescription="@string/content_description_favorite"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/content_description_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:contentDescription="@string/content_description_profile"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/content_description_profile"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/setting"
                android:contentDescription="@string/setting"
                android:icon="@drawable/ic_settings_24"
                android:title="@string/setting"
                app:showAsAction="always" />
            <item
                android:id="@+id/logout"
                android:contentDescription="@string/Logout"
                android:icon="@drawable/ic_logout_24"
                android:title="@string/Logout"
                app:showAsAction="always" />
        </menu>
    </item>

</menu>